@@ -1,7 +1,5 @@
-<<<<<<< Updated upstream
-<<<<<<< HEAD
-package miniBrowser;public class MiniWeb {
-=======
+
+
 package miniBrowser;
 /*
 //Author: Gul Meeri///
@@ -31,37 +29,5 @@ public class MiniWeb extends Application{
         stage.setTitle("My mini Browser"); // Displayed in window's title bar
         stage.show();
     }
->>>>>>> Stashed changes
+
 }
-=======
-package miniBrowser;
-/*
-//Author: Gul Meeri///
-//VM path
---module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
-*/
-
-
-import javafx.application.Application;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.Parent;
-import javafx.scene.Scene;
-import javafx.stage.Stage;
-
-public class MiniWeb extends Application{
-    public static void main(String[] args) {
-        launch(args);
-    }
-
-    @Override
-    public void start(Stage stage) throws Exception {
-        Parent root = FXMLLoader.load(getClass().getResource("MiniWeb.fxml"));
-
-        Scene scene = new Scene(root);
-        stage.setScene(scene);
-
-        stage.setTitle("My mini Browser"); // Displayed in window's title bar
-        stage.show();
-    }
-}
->>>>>>> d23fbd8e135fd60cf83312f484a22fc432b5fc93
